Reformatting for user clarity, also adding country flags and codes to main page

--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
 
     <body>
         <h1>Conor Hogan's CH Robinson Interview Project</h1>
+        <p>This web application takes in a three letter country code and returns all countries that are passed through in order to travel from the United States to the given country. Please enter the desired country code below:</p>
 
         <input id="userInput"><br><br>
 
         <button onclick="master()">Get Path</button> <br>
 
         <script src = "app.js"></script>
+        <h2> Country codes are as follows:</h2>
+        <p><img src = "images/Canada.svg" alt = "Canadian Flag" height="15" width = "20"> Canada: CAN <br></p>
+        <p><img src = "images/USflag.png" alt = "US Flag" height="15" width = "20"> United States: USA <br></p>
+        <p><img src = "images/MexicoFlag.png" alt = "Mexican Flag" height="15" width = "20"> Mexico: MEX <br></p>
+        <p><img src = "images/BelizeFlag.png" alt = "Belizean Flag" height="15" width = "20"> Belize: BLZ <br></p>
+        <p><img src = "images/GuatemalaFlag.svg" alt = "Guatemalan Flag" height="15" width = "20"> Guatemala: GTM <br></p>
+        <p><img src = "images/ElSalvadorFlag.jpeg" alt = "Salvadorian Flag" height="15" width = "20"> El Salvador: SLV <br></p>
+        <p><img src = "images/HondurasFlag.png" alt = "Honduran Flag" height="15" width = "20"> Honduras: HND <br></p>
+        <p><img src = "images/NicaraguaFlag.png" alt = "Nicaraguan Flag" height="15" width = "20"> Nicaragua: NIC <br></p>
+        <p><img src = "images/CostaRicaFlag.png" alt = "Costa Rican Flag" height="15" width = "20"> Costa Rica: CRI <br></p>
+        <p><img src = "images/PanamaFlag.png" alt = "Panamanian Flag" height="15" width = "20"> Panama: PAN <br></p>
     </body>
 </html>
